@@ -1166,6 +1166,7 @@ static int it_load(struct module_data *m, HIO_HANDLE *f, const int start)
 	m->quirk |= QUIRK_VIBHALF | QUIRK_VIBINV;
     } else {
 	m->quirk &= ~QUIRK_VIBALL;
+	m->quirk |= QUIRK_ITOLDFX;
     }
 
     if (sample_mode) {
